Add resource description